# bazel-go-kubernetes-demo

./: .bazelrc  .gitignore  BUILD.bazel  HOWTO.adoc  README.adoc  WORKSPACE  deployment.yaml  gke-tf.yaml  go.mod  go.sum  main.go
